# appledeepdoc-mcp

./: .gitignore  README.md  __init__.py  config.py  main.py  pyproject.toml  run.sh  tools.py
design/: human_interface_guidelines.py
discovery/: __init__.py  tool_filesystem.py
docs/: apple_docs.py  local_docs.py
evolution/: swift_evolution.py
execution/: __init__.py  api_bridge.py  sandbox.py  security.py
suggestions/: suggestions.py
